# search_lens_study_helper

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  screenshot-search.cmd  screenshot-search.vbs
src/screenshot_lens/: __main__.py  app.py  capture.py  lens_browser.py  main_window.py  overlay.py  search.py
