[project]
name = "screenshot-lens"
version = "0.1.0"
description = "Screenshot + Google Lens + OCR desktop app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=6.1.12",
    "keyboard>=0.13.5",
    "mss>=10.2.0",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
    "pyperclip>=1.11.0",
    "pyside6>=6.11.0",
    "requests>=2.33.1",
]

[project.scripts]
screenshot-lens = "screenshot_lens.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screenshot_lens"]
